--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!-- Rodapé -->
     <footer>
         <div class="informacoes">
-            <p>&copy; 2025 Deco Design. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Deco Design.</p>
             <div class="social-media">
                 <a href="https://instagram.com" target="_blank"><img src="assets/imagens/bxl-instagram-alt.svg" alt=""></a>
                 <a href="https://facebook.com" target="_blank"><img src="assets/imagens/bxl-facebook-circle.svg" alt=""></a>
