--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <div class="header">
+        <div class="header" id="header-topo">
             <div>
                 <a href="index.html" id="logo"><img src="assets/imagens/logo.svg" alt="Logo Deco"></a>
                 <button id="openMenu">&#9776;</button>
@@ -62,7 +62,7 @@
                         <i class="fas fa-star-half-alt"></i>
                         <i class="far fa-star"></i>
                     </div>
-                    <a href="produto-detalhe.html" class="btn">Ver detalhes</a>
+                    <a href="#header-topo" class="btn">Ver detalhes</a>
                 </div>
 
                 <div class="produto-card">
@@ -76,7 +76,7 @@
                         <i class="fas fa-star-half-alt"></i>
                         <i class="far fa-star"></i>
                     </div>
-                    <a href="produto-detalhe.html" class="btn">Ver detalhes</a>
+                    <a href="#header-topo" class="btn">Ver detalhes</a>
                 </div>
 
                 <div class="produto-card">
@@ -90,7 +90,7 @@
                         <i class="fas fa-star-half-alt"></i>
                         <i class="far fa-star"></i>
                     </div>
-                    <a href="produto-detalhe.html" class="btn">Ver detalhes</a>
+                    <a href="#header-topo" class="btn">Ver detalhes</a>
                 </div>
             </div>
         </section>
@@ -110,7 +110,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <a href="produto-detalhe.html" class="btn">Ver detalhes</a>
+                    <a href="#header-topo" class="btn">Ver detalhes</a>
                 </div>
 
                 <div class="produto-card destaque">
@@ -124,7 +124,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <a href="produto-detalhe.html" class="btn">Ver detalhes</a>
+                    <a href="#header-topo" class="btn">Ver detalhes</a>
                 </div>
 
                 <div class="produto-card destaque">
@@ -138,7 +138,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <a href="produto-detalhe.html" class="btn">Ver detalhes</a>
+                    <a href="#header-topo" class="btn">Ver detalhes</a>
                 </div>
             </div>
         </section>
