--- a/index.html
+++ b/index.html
@@ -10,24 +10,21 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-
-    <header>
-        <div class="header" id="header-topo">
-            <div>
-                <a href="index.html" id="logo"><img src="assets/imagens/logo.svg" alt="Logo Deco"></a>
-                <button id="openMenu">&#9776;</button>
-            </div>
-            <nav id="menu">
-                <button id="closeMenu">X</button>
-                <a href="#sobre">Sobre</a>
-                <a href="#produtos">Produtos</a>
-                <a href="#destaque">Destaque</a>
-                <a href="#contato">Contato</a>
-            </nav>
-        </div>    
-    </header>
-
-
+    
+    <header class="header" id="header-topo">
+        <div>
+            <a href="index.html" id="logo"><img src="assets/imagens/logo.svg" alt="Logo Deco"></a>
+            <button id="openMenu">&#9776;</button>
+        </div>
+        <nav id="menu">
+            <button id="closeMenu">X</button>
+             <a href="#sobre">Sobre</a>
+            <a href="#produtos">Produtos</a>
+            <a href="#destaque">Destaque</a>
+            <a href="#contato">Contato</a>
+        </nav>
+    </header>    
+    
     <main class="container">
         <!-- Seção Topo -->
         <section class="topo" id="sobre">
