--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deco</title>
+    <title>Jaguaribe Decor</title>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Kumar+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     
     <header class="header" id="header-topo">
         <div>
-            <a href="index.html" id="logo"><img src="assets/imagens/logo.svg" alt="Logo Deco"></a>
+            <a href="index.html" id="logo"><img src="assets/imagens/JD-logo-SemFundo.png" alt="Logo Deco"></a>
             <button id="openMenu">&#9776;</button>
         </div>
         <nav id="menu">
@@ -40,8 +40,8 @@
 
         <!-- Seção Sobre -->
         <section id="sobre" class="sobre">
-            <h2>Sobre a Deco</h2>
-            <p>A Deco é uma empresa especializada em decoração para ambientes internos e externos. Nosso objetivo é transformar espaços com produtos que trazem personalidade e harmonia para cada cantinho. Oferecemos uma seleção curada de itens de decoração, sempre com qualidade e estilo, para que cada cliente tenha a oportunidade de expressar sua própria identidade.</p>
+            <h2>Sobre</h2>
+            <p>Jaguaribe Decor é uma empresa especializada em decoração para ambientes internos e externos. Nosso objetivo é transformar espaços com produtos que trazem personalidade e harmonia para cada cantinho. Oferecemos uma seleção curada de itens de decoração, sempre com qualidade e estilo, para que cada cliente tenha a oportunidade de expressar sua própria identidade.</p>
         </section>
 
         <!-- Seção Produtos -->
