--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaguaribe Decor</title>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Kumar+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -29,7 +30,7 @@
         <!-- Seção Topo -->
         <section class="topo" id="sobre">
             <div class="left">
-                <h1>O seu<br><span>ambiente</span><br>com uma<br>cara nova</h1>
+                <h1>Inove com<br><span>elegância,</span><br>e viva ao<br>seu estilo</h1>
                 <p>Sinta-se leve, ornamente seu espaço e <br> dê uma vida nova para seu lar.</p>
 
             </div>
@@ -145,7 +146,7 @@
             <div class="texto">
                 <h1>Tranforme<br>cada canto<br>em arte</h1>
                 <p>Desfrute do melhor<br>no seu dia a dia.</p>
-                <button type="button" class="button-cta">Saiba Mais</button>
+                <a href="#header-topo" class="btn">Saiba Mais</a>
             </div>
             <img src="assets/imagens/10.jpg" alt="Vaso e Planta"> 
         </section>
@@ -174,11 +175,11 @@
     <!-- Rodapé -->
     <footer>
         <div class="informacoes">
-            <p>&copy; 2025 Deco Design.</p>
+            <p>&copy; 2025 Jaguaribe Decor.</p>
             <div class="social-media">
-                <a href="https://instagram.com" target="_blank"><img src="assets/imagens/bxl-instagram-alt.svg" alt=""></a>
-                <a href="https://facebook.com" target="_blank"><img src="assets/imagens/bxl-facebook-circle.svg" alt=""></a>
-                <a href="https://pinterest.com" target="_blank"><img src="assets/imagens/bxl-pinterest.svg" alt=""></a>
+                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://pinterest.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
             </div>
         </div>
     </footer>   
