--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="left">
                 <h1>Sofisticação e<br>exclusividade<br>para o seu lar.</h1>
                 <p>Jaguaribe Decor, onde o design<br>e a funcionalidade se encontram. </p>
-                <img class="app" src="/assets/imagens/Mobile App Store Badges.svg" alt="">
+                <img class="app" src="assets/imagens/Mobile App Store Badges.svg" alt="">
             </div>
             <div class="right">
                 <img src="assets/imagens/cactoelement03.png" alt="Decoração Cactos">
@@ -53,7 +53,7 @@
             <h2>Nossos Produtos</h2>
             <div class="produtos-lista">
                 <div class="produto-card">
-                    <a href="/assets/pages/detalhe.html"><img src="/assets/imagens/20.png" alt="Produto 1"></a>
+                    <a href="assets/pages/detalhe.html"><img src="assets/imagens/20.png" alt="Produto 1"></a>
                     <h3>Luminária de Mesa</h3>
                     <p>De R$ 450,00 por R$ 380,00</p>
                     <div class="avaliacao">
@@ -63,11 +63,11 @@
                         <i class="fas fa-star-half-alt"></i>
                         <i class="far fa-star"></i>
                     </div>
-                    <a href="/assets/pages/detalhe.html" class="btn">Ver detalhes</a>
+                    <a href="assets/pages/detalhe.html" class="btn">Ver detalhes</a>
                 </div>
         
                 <div class="produto-card">
-                    <img src="/assets/imagens/21.png" alt="Produto 2">
+                    <img src="assets/imagens/21.png" alt="Produto 2">
                     <h3>Relógio de Parede</h3>
                     <p>De R$ 150,00 por R$ 99,00</p>
                     <div class="avaliacao">
@@ -97,15 +97,15 @@
         </section>
 
          <!-- Galeria -->
-         <section class="galeria">
+        <section class="galeria">
             <figure class="item foto-01">
-                <img class="galeria-img" src="/assets/imagens/vaso-foto-texto.png" alt="img-01">
+                <img class="galeria-img" src="assets/imagens/vaso-foto-texto.png" alt="img-01">
             </figure>
             <figure class="item foto-03">
-                <img class="galeria-img" src="/assets/imagens/02.png" alt="img-03">
+                <img class="galeria-img" src="assets/imagens/02.png" alt="img-03">
             </figure>
             <figure class="item foto-04">
-                <img class="galeria-img" src="/assets/imagens/13.png" alt="img-03">
+                <img class="galeria-img" src="assets/imagens/13.png" alt="img-03">
             </figure>
         </section>
 
