--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
         
                 <div class="produto-card">
-                    <img src="assets/imagens/21.png" alt="Produto 2">
+                    <img src="assets/imagens/01.png" alt="Produto 2">
                     <h3>Relógio de Parede</h3>
                     <p>De R$ 150,00 por R$ 99,00</p>
                     <div class="avaliacao">
@@ -99,7 +99,7 @@
          <!-- Galeria -->
         <section class="galeria">
             <figure class="item foto-01">
-                <img class="galeria-img" src="assets/imagens/vaso-foto-texto.png" alt="img-01">
+                <img class="galeria-img" src="assets/imagens/vaso-foto-texto.png"img-01">
             </figure>
             <figure class="item foto-03">
                 <img class="galeria-img" src="assets/imagens/02.png" alt="img-03">
