alteração dos arquivos

--- a/assets/pages/detalhe.html
+++ b/assets/pages/detalhe.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
     <header class="header" id="header-topo">
         <div>
-            <a href="/index.html" id="logo"><img src="/assets/imagens/JD-logo-SemFundo.png" alt="Logo Deco"></a>
+            <a href="/index.html" id="logo"><img src="../imagens/JD-logo-SemFundo.png" alt="Logo Deco"></a>
             <button id="openMenu">&#9776;</button>
         </div>
 
@@ -37,19 +37,19 @@
     </section>
     <section class="detalhe-mais">
         <div>
-            <img class="galeria-detalhe" src="/assets/imagens/18.png" alt="">
+            <img class="galeria-detalhe" src="../imagens/18.png" alt="">
             <h3>Luminária Art.</h3>
         </div>
         <div>
-            <img class="galeria-detalhe" src="/assets/imagens/14.png alt="">
+            <img class="galeria-detalhe" src="../imagens/14.png" alt="">
             <h3>Lumi de Parede</h3>
         </div>
         <div>
-            <img class="galeria-detalhe" src="/assets/imagens/15.png" alt="">
+            <img class="galeria-detalhe" src="../imagens/15.png" alt="">
             <h3>Lustre Gold</h3>
         </div>
         <div>
-            <img class="galeria-detalhe" src="/assets/imagens/19.png" alt="">
+            <img class="galeria-detalhe" src="../imagens/19.png" alt="">
             <h3>Abajur Redondo</h3>
         </div>
     </section>
