--- a/assets/pages/detalhe.html
+++ b/assets/pages/detalhe.html
@@ -30,6 +30,7 @@
             <h2>Luminária de Mesa</h2>
             <h2>R$ 99,00</h2>
             <p>Esta luminária de mesa articulada é um exemplo perfeito de funcionalidade e design moderno. Com uma estrutura metálica robusta e um acabamento elegante, ela oferece a flexibilidade necessária para ajustar a iluminação conforme sua necessidade. Suas articulações permitem movimentos em diferentes direções, tornando-a ideal para atividades como leitura, trabalho ou estudo, ajustando-se facilmente à posição desejada. O design minimalista combina com qualquer ambiente, seja no escritório ou no quarto, e sua base estável garante segurança durante o uso. Além disso, a lâmpada de LED proporciona uma iluminação suave e eficiente, economizando energia sem comprometer o brilho necessário. Uma peça prática e estilosa para qualquer espaço</p>
+            <button class="button-detalhes" type="button">Compre Agora</button>
         </div>
     </section>
     <section class="divisoria">
