--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
         
                 <div class="produto-card">
-                    <img src="assets/imagens/01.png" alt="Produto 2">
+                    <img src="assets/imagens/21.png"Produto 2">
                     <h3>Relógio de Parede</h3>
                     <p>De R$ 150,00 por R$ 99,00</p>
                     <div class="avaliacao">
@@ -102,7 +102,7 @@
                 <img class="galeria-img" src="assets/imagens/vaso-foto-texto.png"img-01">
             </figure>
             <figure class="item foto-03">
-                <img class="galeria-img" src="assets/imagens/02.png" alt="img-03">
+                <img class="galeria-img" src="assets/imagens/02.png">
             </figure>
             <figure class="item foto-04">
                 <img class="galeria-img" src="assets/imagens/13.png" alt="img-03">
