--- a/assets/pages/detalhe.html
+++ b/assets/pages/detalhe.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header" id="header-topo">
         <div>
-            <a href="/index.html" id="logo"><img src="../imagens/JD-logo-SemFundo.png" alt="Logo Deco"></a>
+            <a href="../../index.html" id="logo"><img src="../imagens/JD-logo-SemFundo.png" alt="Logo Deco"></a>
             <button id="openMenu">&#9776;</button>
         </div>
 
