--- a/assets/pages/detalhe.html
+++ b/assets/pages/detalhe.html
@@ -12,12 +12,15 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
+
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <header class="header" id="header-topo">
         <div>
             <a href="../../index.html" id="logo"><img src="../imagens/JD-logo-SemFundo.png" alt="Logo Deco"></a>
-            <button id="openMenu">&#9776;</button>
         </div>
 
     </header> 
@@ -65,7 +68,7 @@
                 <a href="https://pinterest.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
             </div>
         </div>
-    </footer>   
-    <script type="text/javascript" src="assets/js/script.js"></script>   
+    </footer> 
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>   
 </body>
 </html>
